--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -129,7 +129,7 @@
 }
 
 .text-card {
-    margin: 1rem;
+    margin: 0.5rem;
     font-size: 1.1rem;
     color: #052d23;
     font-weight: 500;
@@ -138,13 +138,20 @@
     margin-left: 30px
 }
 
+.text-card > p{
+
+    font-size: 17px;
+    
+}
+
+
 .title-card {
-    margin-top: 15px;
+    margin-top: 13px;
     color: #052d23;
     display: flex;
     justify-content:flex-start;
     margin-left: 30px;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .button-card {
