--- a/src/Components/Pages/ShoppingCart/ShoppingCart.css
+++ b/src/Components/Pages/ShoppingCart/ShoppingCart.css
@@ -3,13 +3,13 @@
     padding: 20px;
     text-align: center; /* Puedes cambiar esto según el diseño que quieras */
     font-size: 18px;
-    flex-wrap: wrap;
+  
   }
   
 .delete-bono{
   border: solid 1px #000000;
   height: 2.5rem;
-  width: 7rem;
+  width: rem;
   border-radius: 20px;
   transition: background-color 500ms;
   margin-top: 1rem;
@@ -19,4 +19,83 @@
 
 .delete-bono:hover {
   background-color: #e3ff9f;
+}
+
+.contentShopping{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.shopping-cart-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8rem;
+  margin-bottom: 10rem;
+  width: 26rem;
+  background-color: #dbd7ff;
+  border-radius: 1.3rem;
+}
+
+.bono-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #dbd7ff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  width: 28rem;
+  max-width: 500px;
+  margin-top: 6rem;
+  
+}
+
+.bono-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.delete-bono {
+  width: 14rem;
+  height: 2.5rem;
+  background: #0c4537;
+  color: white;
+  border: solid 2px #4c9c70;
+  border-radius: 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 0.3s ease;
+  margin-top: 10px;
+}
+
+.delete-bono:hover {
+  background-color: #052d23;
+}
+
+.purchase-bono {
+  width: 14rem;
+  height: 2.5rem;
+  background-color: #dbd7ff;
+  color: rgb(51, 47, 47);
+  border: solid 2px #4c9c70;
+  border-radius: 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 0.3s ease;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.purchase-bono:hover {
+  background-color: #e3ff9f;
+}
+
+.finalize-purchase:focus {
+  outline: none;
 }
