--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -117,6 +117,8 @@ body {
   transition: background-color 500ms;
   color: #fff;
   text-decoration: none;
+  margin-right: 3rem;
+  margin-left: 2rem;
 }
 
 .register:hover {
@@ -168,6 +170,7 @@ body {
   padding: 2px 8px;
   font-size: 12px;
   z-index: 50;
+  margin-right: 19rem;
 }
 
 /* Menú hamburguesa */
@@ -225,8 +228,67 @@ body {
 }
 
 .btn-sign{
-  margin-right: 1rem;
+  color: white;
+  text-decoration: none;
 }
+
+.profile-icon {
+  display: flex;
+  align-items: center; /* Alinea el icono y el texto verticalmente */
+  gap: 8px; /* Espaciado entre el icono y el texto */
+  padding: 5px 10px; /* Espaciado interno */
+  background-color: #f9f9f9; /* Fondo claro */
+  border-radius: 8px; /* Bordes redondeados */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  cursor: pointer; /* Cambia el cursor para indicar que es interactivo */
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  margin-left: 2rem;
+}
+
+.profile-icon:hover {
+  background-color: #e6e6e6; /* Fondo más oscuro al pasar el mouse */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada */
+}
+
+.profile-icon span {
+  font-size: 14px; /* Tamaño del texto */
+  color: #333; /* Color del texto */
+  font-weight: 500; /* Peso del texto */
+}
+
+.profile-icon svg {
+  color: #6cd39b; /* Color del icono */
+  transition: color 0.3s ease;
+}
+
+.logout-button {
+  width: 7rem;
+  height: 2.5rem;
+  background-color: #052d23;
+  color: rgb(51, 47, 47);
+  border: solid 2px #ffffff;
+  border-radius: 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 0.3s ease;
+  color: white;
+  margin-left: 1rem;
+  margin-right: 3rem;
+ 
+}
+
+.logout-button:hover{
+  background-color: #e3ff9f;
+  color: black;
+  
+}
+
+
+.shopi-bag{
+  margin-left: 4rem;
+}
+
+
 
 @media (max-width: 1279px){
 
