--- a/src/Components/Layouts/Carrousel/Carrousel.css
+++ b/src/Components/Layouts/Carrousel/Carrousel.css
@@ -77,6 +77,153 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+/* Estilos del botón de agregar imagen */
+.edit-button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 2px;
+  border-radius: 100%;
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 10px; /* Ajusta la posición del botón al fondo del carrusel */
+  left: 50%;
+  transform: translateX(-50%); /* Centra el botón horizontalmente */
+  z-index: 10;
+  margin-bottom: 1.5rem;
+}
+
+.edit-button:hover {
+  background-color: #45a049;
+}
+
+.add-icon {
+  font-size: 20px;
+}
+
+/* Fondo oscuro detrás de la modal-carrusel */
+.modal-carrusel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Asegura que la modal-carrusel esté encima de otros elementos */
+}
+
+/* Estilo del contenido de la modal-carrusel */
+.modal-carrusel-content {
+  background-color: #214a32;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px; /* Ancho de la modal-carrusel */
+  max-width: 90%; /* Se adapta al tamaño de la pantalla en dispositivos pequeños */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+/* Estilo para el encabezado de la modal-carrusel */
+.modal-carrusel-content h3 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #e3ff9f;
+}
+
+/* Estilo para los botones dentro de la modal-carrusel */
+.modal-carrusel-content button {
+    border:solid 2px #215e3b;
+    background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.modal-carrusel-content button:hover {
+  background-color: #45a049;
+}
+
+/* Estilo para los botones de cerrar */
+.close-modal-carrusel {
+  background-color: #052d23;
+  
+  
+  font-size: 14px;
+}
+
+.close-modal-carrusel:hover {
+  background-color: #1f5c3a;
+  
+}
+
+/* Estilos para los elementos de la lista de imágenes adicionales */
+.modal-carrusel-content ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.modal-carrusel-content li {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.modal-carrusel-content li img {
+  width: 50px; /* Ancho fijo para las miniaturas de las imágenes */
+  height: 50px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.modal-carrusel-content li button {
+    background-color: #052d23;
+  font-size: 14px;
+}
+
+.modal-carrusel-content li button:hover {
+  background-color: #1f5c3a;
+
+}
+
+/* Estilo para el input de tipo file */
+.modal-carrusel-content input[type="file"] {
+  margin-top: 10px;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 11rem;
+  color: transparent;
+  display: flex;
+  align-items: center;
+  margin-left: 5.7rem;
+}
+
+.modal-carrusel-content h4{
+  color: white;
+}
+
+/* Estilos responsivos */
+@media (max-width: 600px) {
+  .modal-carrusel-content {
+    width: 90%; /* Asegura que la modal-carrusel ocupe la mayoría del ancho en pantallas pequeñas */
+  }
+}
+
+
 @media (max-width:480px) {
   .slide img {
     width: 100%; /* Ocupará todo el ancho disponible */
