--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -71,7 +71,7 @@
 }
 
 .containerBonos {
-    display: flex;
+    display: flex;;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -96,12 +96,12 @@
     justify-content: center;
     align-items: center;
     gap: 4rem;
-    flex-wrap: wrap; /* Esto permite que las tarjetas se adapten en pantallas más pequeñas */
+    flex-wrap: wrap; 
     margin-top: 2rem;
     width: 100%;
 }
 
-.bonos1, .bonos2, .bonos3 {
+.bonos1, .bonos2, .bonos3, .bonos4, .bonos5{
     width: 31rem;
     height: 27rem;
     display: flex;
@@ -164,6 +164,15 @@
     margin-top: 1rem;
     color: #0c4537;
     font-size: 3.2rem;
+    font-family: "Nunito", sans-serif;
+}
+
+.bono{
+    width: 31rem;
+    height: 27rem;
+    border-radius: 1.3rem;
+    color: #052d23;
+    padding: 1rem;
     font-family: "Nunito", sans-serif;
 }
 
