--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -295,12 +295,27 @@ body {
   .container-items.scrolled {
     width: 95%;
   }
+
+  .btn-sign{
+    width: 8rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .buttons{
+    margin-left: 1rem;
+  }
  
+  .shopi-bag{
+    margin: 0;
+  }
+
+  .container-items.scrolled .itemNavbar{
+    margin-top: 1.5rem;
+    margin-left: 1rem ;
+  }
 }
 
-@media (max-width: 1024px){
-  
-}
 
 /* Estilos responsivos */
 @media (max-width: 920px) {
@@ -330,6 +345,7 @@ body {
   .buttons  {
     margin-right: 5rem;
     z-index: 1;
+    margin: 1rem;
   }
 }
 
@@ -370,6 +386,16 @@ body {
   .container-items.scrolled .buttons{
     gap: 1rem;
   }
+
+  .profile-icon{
+    width: 10rem;
+    margin: 0;
+  }
+
+  .logout-button{
+    width: 8rem;
+    margin-left: 0;
+  }
 }
 
 @media (max-width :352px){
@@ -408,6 +434,27 @@ body {
 
   .btn-sign{
     width: 7rem;
+  }
+
+  .profile-icon{
+    width: 7rem;
+  }
+
+  .logout-button{
+    width: 7rem;
+  }
+
+  .buttons{
+    gap: 10px;
+  }
+
+  .container-items.scrolled .buttons{
+    gap: 10px;
+  }
+
+  .container-items.scrolled .logout-button{
+    width: 6rem;
+    font-size: 14px;
   }
 
 }
