--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -130,9 +130,21 @@ body {
   color: #fff;
   width: 1.5rem;
   height: 1.5rem;
-  margin-right: 10px;
+  margin-right: 0px;
   font-size: 24px;
 }
+
+.profile-image {
+  width: 35px !important;
+  height: 35px !important;
+  border-radius: 50% !important;
+  object-fit: cover !important;
+  margin-top: 5px;
+}
+
+
+
+
 
 /* Estilos del carrito */
 .cart-container {
@@ -163,14 +175,14 @@ body {
 .cart-indicator {
   position: absolute;
   top: -10px;
-  right: -10px;
+  right: -20px;
   background-color: #ff4b4b;
   color: white;
   border-radius: 50%;
   padding: 2px 8px;
   font-size: 12px;
   z-index: 50;
-  margin-right: 19rem;
+  margin-right: 20.5rem;
 }
 
 /* Menú hamburguesa */
@@ -234,9 +246,11 @@ body {
 
 .profile-icon {
   display: flex;
+  justify-content: center;
   align-items: center; /* Alinea el icono y el texto verticalmente */
-  gap: 8px; /* Espaciado entre el icono y el texto */
-  padding: 5px 10px; /* Espaciado interno */
+  gap: 8px; 
+  padding-left: 8px;
+  padding-right: 8px; 
   background-color: #f9f9f9; /* Fondo claro */
   border-radius: 8px; /* Bordes redondeados */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
