--- a/src/Components/Pages/UserProfile/UserProfile.css
+++ b/src/Components/Pages/UserProfile/UserProfile.css
@@ -23,6 +23,12 @@
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
 
+.profile-image2{
+  width: 12rem;
+  height: 12rem;
+  border-radius: 100px;
+}
+
 .user-profile-header {
   display: flex;
   justify-content: space-between;
