--- a/src/Components/Pages/AdminProfile/AdminProfile.css
+++ b/src/Components/Pages/AdminProfile/AdminProfile.css
@@ -34,7 +34,7 @@
   .create-bono-button {
     width: 100%;
     padding: 12px;
-    background-color: #4CAF50;
+    background-color: #218824;
     color: white;
     border: none;
     border-radius: 4px;
