--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -280,7 +280,7 @@ body {
   background-color: #052d23;
   color: rgb(51, 47, 47);
   border: solid 2px #ffffff;
-  border-radius: 2rem;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 1rem;
   transition: 0.3s ease;
